# MPC-DS

./: readme.md
back_end/: CMakeLists.txt  package.xml
back_end/include/back_end/: bspline_opt.h
back_end/src/: back_end_node.cpp  bspline_opt.cpp
front_end/: CMakeLists.txt  package.xml
front_end/include/front_end/: theta_astar.h
front_end/src/: front_end_node.cpp  theta_astar.cpp
mpc_controller/: CMakeLists.txt  package.xml
mpc_controller/include/mpc_controller/: mpc_controller.h
mpc_controller/src/: mpc_controller.cpp  mpc_node.cpp
plan_manager/: CMakeLists.txt  package.xml
plan_manager/include/plan_manager/: plan_manager.h  replan_fsm.h
plan_manager/params/: run_test.yaml
plan_manager/src/: manager_node.cpp  plan_manager.cpp  replan_fsm.cpp
simulation_utils/laser_simulator/launch/: laser_sim.launch
simulation_utils/laser_simulator/src/: laser_sim_node.cpp
simulation_utils/map_generator/src/: random_forest_sensing.cpp
simulation_utils/robot_simulator/launch/: scout_simulator.xml  vis_car.launch
simulation_utils/robot_simulator/src/: scout_simulator.cpp  scout_visualizer.cpp
